@@ -1,3 +1,6 @@
+./build-aux/arg-nonnull.h
+./build-aux/c++defs.h
+./build-aux/warn-on-use.h
 ./grub-core/boot/decompressor/minilib.c
 ./grub-core/boot/decompressor/none.c
 ./grub-core/boot/decompressor/xz.c
@@ -125,6 +128,7 @@
 ./grub-core/efiemu/prepare32.c
 ./grub-core/efiemu/prepare64.c
 ./grub-core/efiemu/prepare.c
+./grub-core/efiemu/runtime/config.h
 ./grub-core/efiemu/runtime/efiemu.c
 ./grub-core/efiemu/symbols.c
 ./grub-core/font/font.c
@@ -189,11 +193,15 @@
 ./grub-core/gfxmenu/view.c
 ./grub-core/gfxmenu/widget-box.c
 ./grub-core/gnulib/alloca.c
+./grub-core/gnulib/alloca.in.h
 ./grub-core/gnulib/argp-ba.c
 ./grub-core/gnulib/argp-eexst.c
 ./grub-core/gnulib/argp-fmtstream.c
+./grub-core/gnulib/argp-fmtstream.h
 ./grub-core/gnulib/argp-fs-xinl.c
+./grub-core/gnulib/argp.h
 ./grub-core/gnulib/argp-help.c
+./grub-core/gnulib/argp-namefrob.h
 ./grub-core/gnulib/argp-parse.c
 ./grub-core/gnulib/argp-pin.c
 ./grub-core/gnulib/argp-pv.c
@@ -202,15 +210,27 @@
 ./grub-core/gnulib/asnprintf.c
 ./grub-core/gnulib/basename-lgpl.c
 ./grub-core/gnulib/btowc.c
+./grub-core/gnulib/dirname.h
 ./grub-core/gnulib/dirname-lgpl.c
+./grub-core/gnulib/errno.in.h
 ./grub-core/gnulib/error.c
+./grub-core/gnulib/error.h
+./grub-core/gnulib/float+.h
+./grub-core/gnulib/float.in.h
 ./grub-core/gnulib/fnmatch.c
+./grub-core/gnulib/fnmatch.in.h
 ./grub-core/gnulib/fnmatch_loop.c
 ./grub-core/gnulib/getdelim.c
 ./grub-core/gnulib/getline.c
 ./grub-core/gnulib/getopt1.c
 ./grub-core/gnulib/getopt.c
+./grub-core/gnulib/getopt.in.h
+./grub-core/gnulib/getopt_int.h
+./grub-core/gnulib/gettext.h
+./grub-core/gnulib/intprops.h
+./grub-core/gnulib/langinfo.in.h
 ./grub-core/gnulib/localcharset.c
+./grub-core/gnulib/localcharset.h
 ./grub-core/gnulib/malloc.c
 ./grub-core/gnulib/mbrtowc.c
 ./grub-core/gnulib/mbsinit.c
@@ -220,27 +240,50 @@
 ./grub-core/gnulib/mempcpy.c
 ./grub-core/gnulib/nl_langinfo.c
 ./grub-core/gnulib/printf-args.c
+./grub-core/gnulib/printf-args.h
 ./grub-core/gnulib/printf-parse.c
+./grub-core/gnulib/printf-parse.h
 ./grub-core/gnulib/progname.c
+./grub-core/gnulib/progname.h
 ./grub-core/gnulib/rawmemchr.c
 ./grub-core/gnulib/realloc.c
 ./grub-core/gnulib/regcomp.c
 ./grub-core/gnulib/regex.c
 ./grub-core/gnulib/regexec.c
+./grub-core/gnulib/regex.h
 ./grub-core/gnulib/regex_internal.c
+./grub-core/gnulib/regex_internal.h
+./grub-core/gnulib/size_max.h
 ./grub-core/gnulib/sleep.c
+./grub-core/gnulib/stdbool.in.h
+./grub-core/gnulib/stddef.in.h
+./grub-core/gnulib/stdint.in.h
+./grub-core/gnulib/stdio.in.h
 ./grub-core/gnulib/stdio-write.c
+./grub-core/gnulib/stdlib.in.h
 ./grub-core/gnulib/strcasecmp.c
 ./grub-core/gnulib/strchrnul.c
+./grub-core/gnulib/streq.h
 ./grub-core/gnulib/strerror.c
+./grub-core/gnulib/string.in.h
+./grub-core/gnulib/strings.in.h
 ./grub-core/gnulib/stripslash.c
 ./grub-core/gnulib/strncasecmp.c
 ./grub-core/gnulib/strndup.c
 ./grub-core/gnulib/strnlen1.c
+./grub-core/gnulib/strnlen1.h
 ./grub-core/gnulib/strnlen.c
+./grub-core/gnulib/sysexits.in.h
+./grub-core/gnulib/sys_wait.in.h
+./grub-core/gnulib/unistd.in.h
 ./grub-core/gnulib/vasnprintf.c
+./grub-core/gnulib/vasnprintf.h
+./grub-core/gnulib/verify.h
 ./grub-core/gnulib/vsnprintf.c
+./grub-core/gnulib/wchar.in.h
 ./grub-core/gnulib/wcrtomb.c
+./grub-core/gnulib/wctype.in.h
+./grub-core/gnulib/xsize.h
 ./grub-core/hello/hello.c
 ./grub-core/hook/datehook.c
 ./grub-core/io/bufio.c
@@ -341,9 +384,11 @@
 ./grub-core/lib/legacy_parse.c
 ./grub-core/lib/libgcrypt/cipher/ac.c
 ./grub-core/lib/libgcrypt/cipher/arcfour.c
+./grub-core/lib/libgcrypt/cipher/bithelp.h
 ./grub-core/lib/libgcrypt/cipher/blowfish.c
 ./grub-core/lib/libgcrypt/cipher/camellia.c
 ./grub-core/lib/libgcrypt/cipher/camellia-glue.c
+./grub-core/lib/libgcrypt/cipher/camellia.h
 ./grub-core/lib/libgcrypt/cipher/cast5.c
 ./grub-core/lib/libgcrypt/cipher/cipher.c
 ./grub-core/lib/libgcrypt/cipher/crc.c
@@ -352,6 +397,7 @@
 ./grub-core/lib/libgcrypt/cipher/ecc.c
 ./grub-core/lib/libgcrypt/cipher/elgamal.c
 ./grub-core/lib/libgcrypt/cipher/hash-common.c
+./grub-core/lib/libgcrypt/cipher/hash-common.h
 ./grub-core/lib/libgcrypt/cipher/hmac-tests.c
 ./grub-core/lib/libgcrypt/cipher/md4.c
 ./grub-core/lib/libgcrypt/cipher/md5.c
@@ -360,7 +406,9 @@
 ./grub-core/lib/libgcrypt/cipher/pubkey.c
 ./grub-core/lib/libgcrypt/cipher/rfc2268.c
 ./grub-core/lib/libgcrypt/cipher/rijndael.c
+./grub-core/lib/libgcrypt/cipher/rijndael-tables.h
 ./grub-core/lib/libgcrypt/cipher/rmd160.c
+./grub-core/lib/libgcrypt/cipher/rmd.h
 ./grub-core/lib/libgcrypt/cipher/rsa.c
 ./grub-core/lib/libgcrypt/cipher/seed.c
 ./grub-core/lib/libgcrypt/cipher/serpent.c
@@ -370,22 +418,47 @@
 ./grub-core/lib/libgcrypt/cipher/tiger.c
 ./grub-core/lib/libgcrypt/cipher/twofish.c
 ./grub-core/lib/libgcrypt/cipher/whirlpool.c
+./grub-core/lib/libgcrypt_wrap/cipher_wrap.h
 ./grub-core/lib/LzFind.c
 ./grub-core/lib/LzmaDec.c
 ./grub-core/lib/LzmaEnc.c
+./grub-core/lib/minilzo/lzoconf.h
+./grub-core/lib/minilzo/lzodefs.h
 ./grub-core/lib/minilzo/minilzo.c
+./grub-core/lib/minilzo/minilzo.h
 ./grub-core/lib/mips/arc/reboot.c
 ./grub-core/lib/mips/loongson/reboot.c
 ./grub-core/lib/mips/qemu_mips/reboot.c
 ./grub-core/lib/mips/relocator.c
 ./grub-core/lib/pbkdf2.c
+./grub-core/lib/posix_wrap/assert.h
+./grub-core/lib/posix_wrap/ctype.h
+./grub-core/lib/posix_wrap/errno.h
+./grub-core/lib/posix_wrap/inttypes.h
+./grub-core/lib/posix_wrap/langinfo.h
+./grub-core/lib/posix_wrap/limits.h
+./grub-core/lib/posix_wrap/localcharset.h
+./grub-core/lib/posix_wrap/locale.h
+./grub-core/lib/posix_wrap/stdint.h
+./grub-core/lib/posix_wrap/stdio.h
+./grub-core/lib/posix_wrap/stdlib.h
+./grub-core/lib/posix_wrap/string.h
+./grub-core/lib/posix_wrap/sys/types.h
+./grub-core/lib/posix_wrap/unistd.h
+./grub-core/lib/posix_wrap/wchar.h
+./grub-core/lib/posix_wrap/wctype.h
 ./grub-core/lib/powerpc/relocator.c
 ./grub-core/lib/priority_queue.c
 ./grub-core/lib/reed_solomon.c
 ./grub-core/lib/relocator.c
+./grub-core/lib/xzembed/xz_config.h
 ./grub-core/lib/xzembed/xz_dec_bcj.c
 ./grub-core/lib/xzembed/xz_dec_lzma2.c
 ./grub-core/lib/xzembed/xz_dec_stream.c
+./grub-core/lib/xzembed/xz.h
+./grub-core/lib/xzembed/xz_lzma2.h
+./grub-core/lib/xzembed/xz_private.h
+./grub-core/lib/xzembed/xz_stream.h
 ./grub-core/loader/aout.c
 ./grub-core/loader/efi/appleloader.c
 ./grub-core/loader/efi/chainloader.c
@@ -405,6 +478,7 @@
 ./grub-core/loader/i386/pc/pxechainloader.c
 ./grub-core/loader/i386/xnu.c
 ./grub-core/loader/ia64/efi/linux.c
+./grub-core/loader/lzss.c
 ./grub-core/loader/macho32.c
 ./grub-core/loader/macho64.c
 ./grub-core/loader/macho.c
@@ -517,6 +591,321 @@
 ./grub-core/video/sm712.c
 ./grub-core/video/sm712_init.c
 ./grub-core/video/video.c
+./include/grub/acorn_filecore.h
+./include/grub/acpi.h
+./include/grub/aout.h
+./include/grub/arc/arc.h
+./include/grub/arc/console.h
+./include/grub/ata.h
+./include/grub/at_keyboard.h
+./include/grub/auth.h
+./include/grub/autoefi.h
+./include/grub/backtrace.h
+./include/grub/bitmap.h
+./include/grub/bitmap_scale.h
+./include/grub/bsdlabel.h
+./include/grub/bufio.h
+./include/grub/cache.h
+./include/grub/charset.h
+./include/grub/cmos.h
+./include/grub/command.h
+./include/grub/cryptodisk.h
+./include/grub/crypto.h
+./include/grub/cs5536.h
+./include/grub/datetime.h
+./include/grub/decompressor.h
+./include/grub/deflate.h
+./include/grub/device.h
+./include/grub/diskfilter.h
+./include/grub/disk.h
+./include/grub/dl.h
+./include/grub/efi/api.h
+./include/grub/efi/console_control.h
+./include/grub/efi/console.h
+./include/grub/efi/disk.h
+./include/grub/efi/edid.h
+./include/grub/efi/efi.h
+./include/grub/efiemu/efiemu.h
+./include/grub/efiemu/runtime.h
+./include/grub/efi/graphics_output.h
+./include/grub/efi/memory.h
+./include/grub/efi/pci.h
+./include/grub/efi/pe32.h
+./include/grub/efi/time.h
+./include/grub/efi/uga_draw.h
+./include/grub/elf.h
+./include/grub/elfload.h
+./include/grub/emu/console.h
+./include/grub/emu/export.h
+./include/grub/emu/getroot.h
+./include/grub/emu/hostdisk.h
+./include/grub/emu/misc.h
+./include/grub/env.h
+./include/grub/env_private.h
+./include/grub/err.h
+./include/grub/extcmd.h
+./include/grub/fat.h
+./include/grub/fbblit.h
+./include/grub/fbfill.h
+./include/grub/fbutil.h
+./include/grub/file.h
+./include/grub/fontformat.h
+./include/grub/font.h
+./include/grub/fs.h
+./include/grub/fshelp.h
+./include/grub/gdb.h
+./include/grub/gfxmenu_model.h
+./include/grub/gfxmenu_view.h
+./include/grub/gfxterm.h
+./include/grub/gfxwidgets.h
+./include/grub/gpt_partition.h
+./include/grub/gui.h
+./include/grub/gui_string_util.h
+./include/grub/hfs.h
+./include/grub/i18n.h
+./include/grub/i386/at_keyboard.h
+./include/grub/i386/bsd.h
+./include/grub/i386/cmos.h
+./include/grub/i386/coreboot/boot.h
+./include/grub/i386/coreboot/console.h
+./include/grub/i386/coreboot/lbio.h
+./include/grub/i386/coreboot/memory.h
+./include/grub/i386/coreboot/serial.h
+./include/grub/i386/coreboot/time.h
+./include/grub/i386/cpuid.h
+./include/grub/i386/efiemu.h
+./include/grub/i386/efi/memory.h
+./include/grub/i386/efi/serial.h
+./include/grub/i386/efi/time.h
+./include/grub/i386/floppy.h
+./include/grub/i386/freebsd_linker.h
+./include/grub/i386/freebsd_reboot.h
+./include/grub/i386/gdb.h
+./include/grub/i386/ieee1275/ieee1275.h
+./include/grub/i386/ieee1275/memory.h
+./include/grub/i386/ieee1275/serial.h
+./include/grub/i386/ieee1275/time.h
+./include/grub/i386/io.h
+./include/grub/i386/linux.h
+./include/grub/i386/macho.h
+./include/grub/i386/memory.h
+./include/grub/i386/multiboot/boot.h
+./include/grub/i386/multiboot/console.h
+./include/grub/i386/multiboot.h
+./include/grub/i386/multiboot/kernel.h
+./include/grub/i386/multiboot/memory.h
+./include/grub/i386/multiboot/serial.h
+./include/grub/i386/multiboot/time.h
+./include/grub/i386/netbsd_bootinfo.h
+./include/grub/i386/netbsd_reboot.h
+./include/grub/i386/openbsd_bootarg.h
+./include/grub/i386/openbsd_reboot.h
+./include/grub/i386/pc/apm.h
+./include/grub/i386/pc/biosdisk.h
+./include/grub/i386/pc/biosnum.h
+./include/grub/i386/pc/boot.h
+./include/grub/i386/pc/chainloader.h
+./include/grub/i386/pc/console.h
+./include/grub/i386/pci.h
+./include/grub/i386/pc/int.h
+./include/grub/i386/pc/kernel.h
+./include/grub/i386/pc/memory.h
+./include/grub/i386/pc/pxe.h
+./include/grub/i386/pc/time.h
+./include/grub/i386/pc/vbe.h
+./include/grub/i386/pc/vesa_modes_table.h
+./include/grub/i386/pit.h
+./include/grub/i386/qemu/boot.h
+./include/grub/i386/qemu/console.h
+./include/grub/i386/qemu/kernel.h
+./include/grub/i386/qemu/memory.h
+./include/grub/i386/qemu/serial.h
+./include/grub/i386/qemu/time.h
+./include/grub/i386/reboot.h
+./include/grub/i386/relocator.h
+./include/grub/i386/relocator_private.h
+./include/grub/i386/setjmp.h
+./include/grub/i386/time.h
+./include/grub/i386/tsc.h
+./include/grub/i386/types.h
+./include/grub/i386/vga_common.h
+./include/grub/i386/xnu.h
+./include/grub/ia64/efi/memory.h
+./include/grub/ia64/efi/time.h
+./include/grub/ia64/kernel.h
+./include/grub/ia64/setjmp.h
+./include/grub/ia64/time.h
+./include/grub/ia64/types.h
+./include/grub/icon_manager.h
+./include/grub/ieee1275/console.h
+./include/grub/ieee1275/ieee1275.h
+./include/grub/ieee1275/ofdisk.h
+./include/grub/kernel.h
+./include/grub/keyboard_layouts.h
+./include/grub/legacy_parse.h
+./include/grub/lib/arg.h
+./include/grub/lib/cmdline.h
+./include/grub/lib/crc.h
+./include/grub/lib/envblk.h
+./include/grub/libgcc.h
+./include/grub/lib/hexdump.h
+./include/grub/lib/LzFind.h
+./include/grub/lib/LzHash.h
+./include/grub/lib/LzmaDec.h
+./include/grub/lib/LzmaEnc.h
+./include/grub/lib/LzmaTypes.h
+./include/grub/libpciaccess.h
+./include/grub/libusb.h
+./include/grub/list.h
+./include/grub/loader.h
+./include/grub/lvm.h
+./include/grub/macho.h
+./include/grub/machoload.h
+./include/grub/memory.h
+./include/grub/menu.h
+./include/grub/menu_viewer.h
+./include/grub/mips/arc/kernel.h
+./include/grub/mips/arc/memory.h
+./include/grub/mips/arc/time.h
+./include/grub/mips/at_keyboard.h
+./include/grub/mips/cache.h
+./include/grub/mips/cmos.h
+./include/grub/mips/io.h
+./include/grub/mips/kernel.h
+./include/grub/mips/loongson/at_keyboard.h
+./include/grub/mips/loongson/cmos.h
+./include/grub/mips/loongson/ec.h
+./include/grub/mips/loongson.h
+./include/grub/mips/loongson/kernel.h
+./include/grub/mips/loongson/memory.h
+./include/grub/mips/loongson/pci.h
+./include/grub/mips/loongson/serial.h
+./include/grub/mips/loongson/time.h
+./include/grub/mips/memory.h
+./include/grub/mips/mips.h
+./include/grub/mips/multiboot.h
+./include/grub/mips/pci.h
+./include/grub/mips/qemu_mips/at_keyboard.h
+./include/grub/mips/qemu_mips/cmos.h
+./include/grub/mips/qemu_mips/console.h
+./include/grub/mips/qemu_mips/kernel.h
+./include/grub/mips/qemu_mips/loader.h
+./include/grub/mips/qemu_mips/memory.h
+./include/grub/mips/qemu_mips/serial.h
+./include/grub/mips/qemu_mips/time.h
+./include/grub/mips/relocator.h
+./include/grub/mips/setjmp.h
+./include/grub/mips/time.h
+./include/grub/mips/types.h
+./include/grub/misc.h
+./include/grub/mm.h
+./include/grub/mm_private.h
+./include/grub/msdos_partition.h
+./include/grub/multiboot.h
+./include/grub/multiboot_loader.h
+./include/grub/net/arp.h
+./include/grub/net/ethernet.h
+./include/grub/net.h
+./include/grub/net/ip.h
+./include/grub/net/netbuff.h
+./include/grub/net/tcp.h
+./include/grub/net/udp.h
+./include/grub/normal.h
+./include/grub/ns8250.h
+./include/grub/ntfs.h
+./include/grub/offsets.h
+./include/grub/parser.h
+./include/grub/partition.h
+./include/grub/parttool.h
+./include/grub/pci.h
+./include/grub/pciutils.h
+./include/grub/powerpc/ieee1275/ieee1275.h
+./include/grub/powerpc/ieee1275/time.h
+./include/grub/powerpc/kernel.h
+./include/grub/powerpc/memory.h
+./include/grub/powerpc/relocator.h
+./include/grub/powerpc/setjmp.h
+./include/grub/powerpc/time.h
+./include/grub/powerpc/types.h
+./include/grub/priority_queue.h
+./include/grub/reader.h
+./include/grub/reed_solomon.h
+./include/grub/relocator.h
+./include/grub/relocator_private.h
+./include/grub/script_sh.h
+./include/grub/scsicmd.h
+./include/grub/scsi.h
+./include/grub/sdl.h
+./include/grub/search.h
+./include/grub/serial.h
+./include/grub/setjmp.h
+./include/grub/smbus.h
+./include/grub/sparc64/ieee1275/boot.h
+./include/grub/sparc64/ieee1275/ieee1275.h
+./include/grub/sparc64/ieee1275/kernel.h
+./include/grub/sparc64/ieee1275/time.h
+./include/grub/sparc64/setjmp.h
+./include/grub/sparc64/time.h
+./include/grub/sparc64/types.h
+./include/grub/symbol.h
+./include/grub/term.h
+./include/grub/terminfo.h
+./include/grub/test.h
+./include/grub/time.h
+./include/grub/tparm.h
+./include/grub/trig.h
+./include/grub/types.h
+./include/grub/unicode.h
+./include/grub/usbdesc.h
+./include/grub/usb.h
+./include/grub/usbserial.h
+./include/grub/usbtrans.h
+./include/grub/util/libnvpair.h
+./include/grub/util/libzfs.h
+./include/grub/util/lvm.h
+./include/grub/util/misc.h
+./include/grub/util/ofpath.h
+./include/grub/util/resolve.h
+./include/grub/vga.h
+./include/grub/video_fb.h
+./include/grub/video.h
+./include/grub/x86_64/at_keyboard.h
+./include/grub/x86_64/efi/boot.h
+./include/grub/x86_64/efi/loader.h
+./include/grub/x86_64/efi/memory.h
+./include/grub/x86_64/efi/serial.h
+./include/grub/x86_64/efi/time.h
+./include/grub/x86_64/io.h
+./include/grub/x86_64/linux.h
+./include/grub/x86_64/macho.h
+./include/grub/x86_64/memory.h
+./include/grub/x86_64/multiboot.h
+./include/grub/x86_64/pci.h
+./include/grub/x86_64/relocator.h
+./include/grub/x86_64/setjmp.h
+./include/grub/x86_64/time.h
+./include/grub/x86_64/types.h
+./include/grub/x86_64/xnu.h
+./include/grub/xnu.h
+./include/grub/zfs/dmu.h
+./include/grub/zfs/dmu_objset.h
+./include/grub/zfs/dnode.h
+./include/grub/zfs/dsl_dataset.h
+./include/grub/zfs/dsl_dir.h
+./include/grub/zfs/sa_impl.h
+./include/grub/zfs/spa.h
+./include/grub/zfs/uberblock_impl.h
+./include/grub/zfs/vdev_impl.h
+./include/grub/zfs/zap_impl.h
+./include/grub/zfs/zap_leaf.h
+./include/grub/zfs/zfs_acl.h
+./include/grub/zfs/zfs.h
+./include/grub/zfs/zfs_znode.h
+./include/grub/zfs/zil.h
+./include/grub/zfs/zio_checksum.h
+./include/grub/zfs/zio.h
+./include/multiboot2.h
+./include/multiboot.h
 ./tests/example_unit_test.c
 ./tests/lib/unit_test.c
 ./tests/printf_unit_test.c
